# CryptoPortfolioMCPServer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TOOLS_REFERENCE.md  pyproject.toml  requirements.txt  setup.sh  test_config.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: __init__.py  server.py
src/analytics/: __init__.py  market.py  portfolio.py  risk.py
src/exchanges/: __init__.py  base_exchange.py  binance_client.py  coinbase_client.py  kraken_client.py
src/utils/: __init__.py  config.py  helpers.py
